--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ sdl2 = { version = "0.32", features = ["ttf","image","gfx","mixer"] }
 time = "0.1"
 specs = "0.15"
 specs-derive = "0.4"
+rand = "0.7"
+rand_core="0.5"
