--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
-[package]
-name = "rideways"
-version = "0.1.0"
-authors = ["Peter Allin <peter@peca.dk>"]
-edition = "2018"
+[workspace]
+members = [
+    "shared_types",
+    "ecs_components",
+    "ecs_systems",
+    "ecs_setup",
+    "geometry",
+    "main",
+    "sdl_input",
+    "sdl_graphics"
+]
 
-[dependencies]
-sdl2 = { version = "0.32", features = ["ttf","image","gfx","mixer"] }
-time = "0.1"
-specs = "0.15"
-specs-derive = "0.4"
-rand = "0.7"
-rand_core="0.5"
